--- a/testweb.conf.j2
+++ b/testweb.conf.j2
@@ -1,7 +1,7 @@
 server {
 	listen 80;
 	server_name testweb.com;
-	root "/var/www/html;
+	root /var/www/html;
 
 	location / {
 		index index.html index.cgi index.pl index.php index.xhtml index.htm index.shtml;
